# GateOpener

./: .gitignore  CMakeLists.txt  ReadMe.md  nvs.csv  partitions.csv  sdkconfig
main/: CMakeLists.txt  config.c  config.h  http_config.c  main.c  power_driver.c  telegram.c  wifi_config.c  wifi_config.h  wifi_config_ap.c
telegram_info/: bot_commands.json
