idf_component_register(SRCS "config.c"
                            "main.c"
                            "wifi_config.c"
                            "power_driver.c"
                            "config.c"
                            "wifi_config_ap.c"
                            "http_config.c"
                            "telegram.c"
                    INCLUDE_DIRS ".")
